# 26-wuren-chenzhihan

./: README.md
CMake_Test/: README.md  cmakelists.txt
CMake_Test/common/: CMakeLists.txt
CMake_Test/common/kalman/: CMakeLists.txt
CMake_Test/modules/: CMakeLists.txt
CMake_Test/modules/M1/: CMakeLists.txt
Simulink/: LQR.slx
Simulink/Simulink/: MPC(废稿).slx  PID.slx
Simulink/Test/: 未完成心得README.md
Simulink/Test/common/kalman/: CMakeLists.txt
Simulink/Test/modules/: CMakeLists.txt
Simulink/demo_turtle2/: README.md
Simulink/demo_turtle2/devel/lib/demo_turtle2/: demo_turtle2_sub_c
Simulink/demo_turtle2/devel/lib/pkgconfig/: demo_turtle2.pc
Simulink/demo_turtle2/devel/share/demo_turtle2/cmake/: demo_turtle2-msg-paths.cmake
Simulink/demo_turtle2/devel/share/roseus/ros/demo_turtle2/: manifest.l
Simulink/demo_turtle2/install/: local_setup.sh
Simulink/demo_turtle2/src/demo_turtle2/: CMakeLists.txt
Simulink/demo_turtle2/src/demo_turtle2/launch/: start.launch
Simulink/demo_turtle2/src/demo_turtle2/src/: demo_turtle2_sub_c.cpp
Test/: CMakeLists.txt  未完成心得README.md
Test/common/: CMakeLists.txt
Test/modules/M1/: CMakeLists.txt
demo_finish/: README(刚开始).md
demo_finish/devel/: .catkin
demo_finish/devel/lib/lidar_pkg/: lidar_sub_c
demo_finish/devel/lib/pkgconfig/: fsd_common_msgs.pc  lidar_pkg.pc
demo_finish/devel/share/fsd_common_msgs/cmake/: fsd_common_msgs-msg-paths.cmake  fsd_common_msgsConfig.cmake
demo_finish/devel/share/gennodejs/ros/fsd_common_msgs/msg/: _index.js
demo_finish/devel/share/lidar_pkg/cmake/: lidar_pkgConfig.cmake
demo_finish/devel/share/roseus/ros/fsd_common_msgs/: manifest.l
demo_finish/install/: .rosinstall  local_setup.fish  local_setup.sh  setup.sh
demo_finish/src/fsd_common_msgs/: package.xml
demo_finish/src/lidar_pkg/: CMakeLists.txt
demo_finish/src/lidar_pkg/src/: lidar_sub_c.cpp
demo_turtle2/devel/: .catkin  .rosinstall
demo_turtle2/devel/include/demo_turtle2/: turtle.h
demo_turtle2/devel/lib/demo_turtle2/: demo_turtle2_pub_p.py
demo_turtle2/devel/lib/python3/dist-packages/demo_turtle2/msg/: _turtle.py
demo_turtle2/devel/share/common-lisp/ros/demo_turtle2/msg/: _package_turtle.lisp  demo_turtle2-msg.asd  turtle.lisp
demo_turtle2/devel/share/demo_turtle2/cmake/: demo_turtle2-msg-extras.cmake  demo_turtle2Config.cmake
demo_turtle2/devel/share/roseus/ros/demo_turtle2/msg/: turtle.l
demo_turtle2/install/: setup.fish  setup.sh
demo_turtle2/src/demo_turtle2/msg/: turtle.msg
demo_turtle2/src/demo_turtle2/param/: parameter.yaml
linux_practice/: .bashrc  README.md  text.sh
融合作业/demo_pcl/: (半完成)README.md
融合作业/demo_pcl/devel/: .catkin  setup.sh
融合作业/demo_pcl/devel/lib/pcl_test/: pcl_test_c
融合作业/demo_pcl/devel/lib/pkgconfig/: pcl_test.pc
融合作业/demo_pcl/devel/share/pcl_test/cmake/: pcl_testConfig.cmake
融合作业/demo_pcl/install/: setup.sh
融合作业/demo_pcl/src/pcl_test/: CMakeLists.txt  package.xml
融合作业/demo_pcl/src/pcl_test/config/: result.rviz
融合作业/demo_pcl/src/pcl_test/launch/: start.launch
融合作业/demo_pcl/src/pcl_test/src/: pcl_test_c.cpp
融合作业/demo_rviz/: (未完成)README.md
融合作业/demo_rviz/devel/: .catkin  .rosinstall
融合作业/demo_rviz/devel/include/rviz_test/: Cone.h  ConeDetections.h
融合作业/demo_rviz/devel/lib/pkgconfig/: rviz_test.pc
融合作业/demo_rviz/devel/lib/rviz_test/: sub_cal_c
融合作业/demo_rviz/devel/share/roseus/ros/rviz_test/: manifest.l
融合作业/demo_rviz/devel/share/rviz_test/cmake/: rviz_test-msg-extras.cmake  rviz_test-msg-paths.cmake  rviz_testConfig.cmake
融合作业/demo_rviz/install/: local_setup.fish  local_setup.sh  setup.sh
融合作业/demo_rviz/src/rviz_test/: CMakeLists.txt  package.xml
融合作业/demo_rviz/src/rviz_test/launch/: start.launch
融合作业/demo_rviz/src/rviz_test/msg/: ConeDetections.msg
融合作业/demo_rviz/src/rviz_test/src/: sub_cal_c.cpp
(+16 files in other folders)
